--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
+    "react-player": "^2.15.1",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
