--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^9.0.11",
     "install": "^0.13.0",
     "lint-staged": "^15.2.2",
+    "lodash": "^4.17.21",
     "npm": "^10.5.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
