--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^14.1.0",
     "react-player": "^2.15.1",
     "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0"
   },
