--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -21,12 +22,14 @@
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
     "react-player": "^2.15.1",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
@@ -45,6 +48,7 @@
     "npm": "^10.5.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "react-intersection-observer": "^9.8.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
