--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
     "react-player": "^2.15.1",
